[package]
name = "rtwins"
version = "0.3.0"
authors = ["Mariusz Midor <mmidor@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-width = "0.1"
libc = "0.2"
chrono = "0.4"
lazy_static = "1"
paste = "1.0.10"
# num_enum = "0.5.10"
# enum-iterator = "1.3.0"
# strum = "0.2"
# log = "0.4"

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.release]
# https://jamesmunns.com/blog/tinyrocket/
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
#panic = 'abort'
strip = "debuginfo"

[profile.dev]
debug = true
lto = false
codegen-units = 2
opt-level = 0

[features]
# enable fast line drawing on terminals supporting code ESC-b
fast_line = []

# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

