[package]
name = "rtwins"
version = "0.5.1"
authors = ["Mariusz Midor <mmidor@gmail.com>"]
edition = "2021"
description = "Library designed for creation of text user interface applications (TUI) for microcontrollers (but not limited to)"
readme = "README.md"
keywords = ["cli", "tui", "console", "no_std", "embedded"]
categories = ["command-line-utilities", "no-std"]
license = "MIT"
repository = "https://github.com/marmidr/rtwins"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_once_cell = "0.1.5"
paste = "1.0.10"
try-lock = "0.2.4"
unicode-width = "0.1"
# num_enum = "0.5.10"
# enum-iterator = "1.3.0"
# strum = "0.2"
# log = "0.4"
# spin = "0.7.1"

[dev-dependencies]
chrono = "0.4"
libc = "0.2"
pretty_assertions = "1.3.0"

[features]
# enable fast line drawing on terminals supporting code ESC-b
fast_line = []
# delay after each flush() to show the render progress
slow_flush = []
# default features:
default = ["fast_line"]
